Core/resources/DarkBlue.css
QPlainTextEdit
{
	font: 12px Menlo;
}

QMainWindow, XQEOutput, QMessageBox, XmlEditor
{
	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0.26601 rgb(42, 59, 93), stop:1 rgb(0, 0, 0));
}

QLabel, TextEditMetaBorder
{
	color: rgb(204, 204, 204);
}

QLineEdit#textSourceFile
{
    border-style: inset;
    border-width: 1px;
    border-color: gray;
    border-bottom-left-radius: 10px;
    padding-left: 5px;
    min-height: 20px
}

QComboBox {
    border: 1px solid gray;
    border-bottom-left-radius: 10px;
    padding: 1px 18px 1px 3px;
    min-width: 4em;
}

QComboBox::drop-down
{
    background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 rgb(230, 230, 230), stop: 1.0 rgb(128, 128, 128));
    subcontrol-origin: padding;
    subcontrol-position: top right;
    width: 20px;

    border-left-color: gray;
    border-left-style: solid;
}

QComboBox::drop-down:pressed, QComboBox::drop-down:on
{
	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0.26601 rgb(128, 128, 128), stop:1 rgb(230, 230, 230));
}

QComboBox::down-arrow
{
    image: url(:/down-arrow.svg) 8px 8px;
}

QToolBar
{
	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0.26601 rgb(230, 230, 230), stop:1 rgb(128, 128, 128));
	spacing: 3;
} 

QToolButton#btnOpenSource:pressed
{
	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0.26601 rgb(128, 128, 128), stop:1 rgb(200, 200, 200));
}

QToolButton#btnOpenSource
{
   	background: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0.26601 rgb(230, 230, 230), stop:1 rgb(128, 128, 128));
	border-style: solid;
	border-width: 1px;
	border-color: gray;
    border-top-right-radius: 10px;
    min-height: 17px
}

QMessageBox
{
    messagebox-question-icon: url(:/question.png);
}

